# k8s-llm-runtime

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
charts/llm-inference/: Chart.yaml  values.yaml
charts/llm-inference/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/llm-router/: Chart.yaml  values.yaml
charts/llm-router/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docker/: Dockerfile.router
docker/mock-vllm/: Dockerfile  entrypoint.sh  server.py  values-mock.yaml
docs/: amd-interview-demo.md  architecture.md  project-overview.md  usage.md
examples/vllm_qwen/: __init__.py  benchmark.py  client.py  server.py  test_request.json
scripts/cluster/: TODO.md  common.sh  install-prereqs.sh  kind-config-gpu.yaml  kind-config.yaml  kind-down.sh  kind-up.sh  minikube-down.sh  minikube-up.sh
scripts/cluster/common/: install-metrics-server.sh  install-nginx.sh
src/k8s_llm_runtime/: __init__.py  _client.py  _log.py  _metrics.py  _retry.py  errors.py  job.py  lock.py  model.py  server.py  types.py  vllm.py
tests/chart/: conftest.py  test_llm_inference.py  test_llm_router.py
tests/integration/: conftest.py  test_e2e.py
tests/unit/: test_client.py  test_errors.py  test_job.py  test_lock.py  test_model.py  test_retry.py  test_server.py  test_types.py  test_vllm.py
(+2 files in other folders)
